# tubular_reactor

./: LICENSE  Python_setup.md  README.md  pyproject.toml  test_reactors.py
examples/: reactors.md
src/mr_design/: mr_calc_class.py  substances.py
src/reactors/: __init__.py  reactor.py  substances.py
